# AI-mini-games

Anoi-Tower/: anoi.cpp  anoi.pl  ΤΕΧΝΗΤΗ ΝΟΗΜΟΣΥΝΗ ΚΑΙ ΕΜΠΕΙΡΑ ΣΥΣΤΗΜΑΤΑ 1η.docx
Color-Graph/: color_graph.cpp  main.cpp  out.txt
Digit-Detection/: CMakeCache.txt  CMakeLists.txt  image_converter.py  neural-net.cpp  out.txt  out2.txt  readimage.cpp
Digit-Detection/tmp/: test.txt  train.txt
R2D2/: BFS.cpp  fuzzy.py
